--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,9 @@
     "settings": {
         "import/resolver": {
             "typescript": {}
+        },
+        "react": {
+            "version": "18.2"
         }
     }
 }
