--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "tabWidth": 2,
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "jsxSingleQuote": false,
   "bracketSpacing": true
 }
